Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)
........S. [ZBX-5318] added remote commands in expanded {ESC.HISTORY} macro (Sasha)
A.F....... [ZBX-1357] added Chinese (Taiwan) translation; thanks to Zabbix translators (Richlv)
A.F....... [ZBX-1357] updated Chinese (China), Brazilian Portuguese, German, Japanese, Latvian, Spanish and Russian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
...G...... [ZBX-5473] fixed agent crash under FreeBSD and Linux when started with -p or -t vfs.dev.read/write (Sasha)
..F....... [ZBX-5513] fixed http authentication without directly passing password (Eduard)
..F....PS. [ZBX-4852] fixed calculation of update interval if flexible intervals are used (Andris, Sasha)
A......... [ZBX-5434] fixed linking template items to host validation (Eduard)
..F....... [ZBX-5514] fixed sql query in get_min_itemclock_by_itemid function (Eduard)
A......... [ZBX-5510] fixed item name selecting using group filter (Eduard)
..F....... [ZBX-2939] fixed login button link in http auth mode (Eduard)
..F....... [ZBX-5406] fixed error when export template with another template with screens linked to it (Vedmak)