@@ -1,6 +1,7 @@
 Changes for 2.0.3rc1
 
 New features:
+.......PS. [ZBX-4638] added support of {HOST.HOST}, {HOST.NAME}, {HOST.IP}, {HOST.DNS} and {HOST.CONN} macros in "params" field for SSH, Telnet and DB monitor items (Sasha)
 ...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
 ........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
 A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
